<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectActivity"
    android:background="#f9f1f1">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_marginTop="100dp"
        android:id="@+id/res"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_way_to_help"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:id="@+id/way"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/way"
        android:layout_marginTop="50dp"
       android:id="@+id/donate"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/contribute_to_the_cause"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/donate"
        android:id="@+id/donate2"
       />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/donate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/donate"
        app:layout_constraintBottom_toBottomOf="@id/donate2"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pray"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/donate2"
        android:layout_marginTop="50dp"
        android:id="@+id/pray"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/pray_for_your_brothers_and_sisters"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/pray"
        android:id="@+id/pray2"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/pray"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/pray"
        app:layout_constraintBottom_toBottomOf="@id/pray2"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boycott"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/pray2"
        android:layout_marginTop="50dp"
        android:id="@+id/boycott"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/don_t_pay_for_the_bombs"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/boycott"
        android:id="@+id/boycott2"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/boycott"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/boycott"
        app:layout_constraintBottom_toBottomOf="@id/boycott2"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spread_awareness"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/boycott2"
        android:layout_marginTop="50dp"
        android:id="@+id/aware"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/be_thier_voice"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/aware"
        android:id="@+id/aware2"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/aware"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/aware"
        app:layout_constraintBottom_toBottomOf="@id/aware2"
        />






</androidx.constraintlayout.widget.ConstraintLayout>