<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PredonateActivity"
    android:background="#f9f1f1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:id="@+id/res"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/where_are_you_helping_from"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:id="@+id/way"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/algeria"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/way"
        android:layout_marginTop="150dp"
        android:id="@+id/donate"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/contribute_as_an_algerian"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/donate"
        android:id="@+id/donate2"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/algeria"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/donate"
        app:layout_constraintBottom_toBottomOf="@id/donate2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/donate2"
        android:layout_marginTop="50dp"
        android:id="@+id/pray"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/contribute_as_an_international"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/pray"
        android:id="@+id/pray2"
        />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/international"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/pray"
        app:layout_constraintBottom_toBottomOf="@id/pray2"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/back"
        />


</androidx.constraintlayout.widget.ConstraintLayout>