<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlgeriaActivity"
    android:background="#f9f1f1">

<ImageView
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:src="@drawable/back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:id="@+id/back"
    />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:id="@+id/res"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_as_an_algerian"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:id="@+id/way"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baraka"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/rakkas"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/way"
        android:layout_marginTop="60dp"
        android:id="@+id/baraka"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/baraka"
        android:layout_marginEnd="30dp"
        android:id="@+id/loc1"
        />
    <TextView
        android:id="@+id/locc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/loc1"
        app:layout_constraintBottom_toBottomOf="@id/loc1"
        app:layout_constraintTop_toTopOf="@id/loc1"
        android:text="@string/add1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc1"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/phone1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barakphone"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/phone1"
        app:layout_constraintBottom_toBottomOf="@id/phone1"
        app:layout_constraintEnd_toStartOf="@id/phone1"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/phone11"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/bank"
        app:layout_constraintTop_toBottomOf="@id/phone1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:id="@+id/bank"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/barakabank"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/bank"
        app:layout_constraintBottom_toBottomOf="@id/bank"
        app:layout_constraintEnd_toStartOf="@id/bank"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ccp"
        app:layout_constraintTop_toBottomOf="@id/bank"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/ccp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/_210_243_29_cle_40"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/ccp"
        app:layout_constraintBottom_toBottomOf="@id/ccp"
        app:layout_constraintEnd_toStartOf="@id/ccp"
        android:layout_marginEnd="10dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/instagram"
        app:layout_constraintTop_toBottomOf="@id/ccp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/barakainsta"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="elbarakahdz"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/barakainsta"
        app:layout_constraintBottom_toBottomOf="@id/barakainsta"
        app:layout_constraintEnd_toStartOf="@id/barakainsta"
        android:layout_marginEnd="10dp"
        android:id="@+id/barakainsta1"
        />








    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="جمعية العلماء المسلمين"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="@font/rakkas"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/barakainsta"
        android:layout_marginTop="60dp"
        android:id="@+id/mus"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mus"
        android:layout_marginEnd="30dp"
        android:id="@+id/loc2"
        />
    <TextView
        android:id="@+id/locc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/loc2"
        app:layout_constraintBottom_toBottomOf="@id/loc2"
        app:layout_constraintTop_toTopOf="@id/loc2"
        android:text="@string/_17_hussein_dey16006"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loc2"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/phone2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musphone"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/phone2"
        app:layout_constraintBottom_toBottomOf="@id/phone2"
        app:layout_constraintEnd_toStartOf="@id/phone2"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/phone22"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/bank"
        app:layout_constraintTop_toBottomOf="@id/phone2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:id="@+id/bank2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/musbank"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/bank2"
        app:layout_constraintBottom_toBottomOf="@id/bank2"
        app:layout_constraintEnd_toStartOf="@id/bank2"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        />



    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/facebook"
        app:layout_constraintTop_toBottomOf="@id/bank2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/musfb"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="جمعية العلماء المسلمين الجزائريين \n الصفحة الرسمية"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/musfb"
        app:layout_constraintBottom_toBottomOf="@id/musfb"
        app:layout_constraintEnd_toStartOf="@id/musfb"
        android:layout_marginEnd="10dp"
        android:id="@+id/musfb1"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>