<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#f9f1f1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_marginTop="150dp"
        android:id="@+id/res"
        android:fontFamily="@font/adobeclean"
        />
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/support_innocent_civilians_in_gaza_with_just_a_few_clicks"
     android:textSize="25sp"
     android:textAlignment="center"
     android:layout_marginHorizontal="45dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/res"
     android:layout_marginTop="20dp"
     android:textColor="#000000"
     />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/get_started"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/adobeclean"
        />
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="المؤمن"
     android:textColor="#e5312a"
     android:textSize="33sp"
     android:fontFamily="@font/rakkas"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:layout_marginEnd="25dp"
     android:id="@+id/m1"
     android:layout_marginTop="50dp"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="للمؤمن"
        android:textColor="#268125"
        android:textSize="33sp"
        android:fontFamily="@font/rakkas"
        app:layout_constraintTop_toTopOf="@id/m1"
        app:layout_constraintBottom_toBottomOf="@id/m1"
        app:layout_constraintEnd_toStartOf="@id/m1"
        android:id="@+id/m2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="كالبنيان يشد بعضه بعضًا"
        android:textColor="#010001"
        android:textSize="33sp"
        android:fontFamily="@font/rakkas"
        app:layout_constraintTop_toTopOf="@id/m2"
        app:layout_constraintBottom_toBottomOf="@id/m2"
        app:layout_constraintEnd_toStartOf="@id/m2"
        android:id="@+id/m3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/mutafak"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/m3"
        android:textSize="15sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>