<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrayActivity"
    android:background="#f9f1f1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_marginTop="80dp"
        android:id="@+id/res"
        android:fontFamily="@font/adobeclean"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pray_for_your_brothers_and_sisters"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:id="@+id/way"
        />



    <TextView
        android:fontFamily="@font/rakkas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/way"
        android:id="@+id/p1"
        android:layout_marginTop="90dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="20sp"
        />
    <TextView
        android:fontFamily="@font/rakkas"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/p1"
        android:id="@+id/p2"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textSize="20sp"
        />
    <TextView
        android:fontFamily="@font/rakkas"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/p2"
        android:id="@+id/p3"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        />






    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/generate_prayer"
        android:fontFamily="@font/adobeclean"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:id="@+id/generate"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/back"
        />


</androidx.constraintlayout.widget.ConstraintLayout>